# peter-parquet

./: LICENSE  README.md  pyproject.toml  setup.py
peter_parquet/: cliparquet.py  main.py
src/: main.py  view_parquet.py
src/parquet_viewer.egg-info/: PKG-INFO  SOURCES.txt
src/parquetviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_peter_parquet.py
