[tool.poetry]
name = "peter-parquet"
version = "0.3.0"
description = ""
authors = ["sjlva <rafaelsilva@posteo.net>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sjlva/peter-parquet"

[tool.poetry.scripts]
peter-parquet = "peter_parquet.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.1"}
rich = {extras = ["all"], version = "^12.4.4"}
pyarrow = {extras = ["all"], version = "^8.0.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
